# wb-notifier

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
client/: Cargo.toml
client/src/: lib.rs
driver/: Cargo.toml
driver/src/: bargraph.rs  cmds.rs  lcd.rs  lib.rs
proto/: Cargo.toml
proto/src/: bargraph.rs  echo.rs  error.rs  init.rs  lcd.rs  lib.rs
scripts/: wb-notifier.bash  wb-notifier.service  wb-notify-curl.sh
server/: Cargo.toml
server/src/: lib.rs  tasks.rs
src/: bargraph.rs  lib.rs  main.rs  server.rs
src/bargraph/: driver.rs  tasks.rs
