[package]
name = "wb-notifier"
version = "0.1.0"
edition = "2021"

[dependencies]
smol = { version = "2.0.0", optional = true }
postcard = { version = "1.0.8", default_features = false, features = [ "use-std" ] }
postcard-rpc = { version = "0.3.1", default-features = false }
wb-notifier-client = { path = "./client", optional = true }
wb-notifier-proto = { path = "./proto" }
wb-notifier-server = { path = "./server", optional = true }
argh = "0.1.12"
directories = { version = "5.0.1", optional = true }
config = { version = "0.13.4", default_features = false, features = [ "json" ], optional = true }
eyre = { version = "0.6.11", default-features = false, features = [ "auto-install" ]}
serde = { version = "1.0.196", default-features = false, features = [ "std", "derive" ], optional = true }

[[bin]]
name = "wbn-client"
path = "src/bin/client.rs"

[features]
default = [ "client", "server" ]
client = [ "dep:wb-notifier-client" ]
server = [ "dep:smol", "dep:wb-notifier-server", "dep:directories", "dep:config", "dep:serde"]

[workspace]
members = [ "client", "driver", "proto", "server" ]

[profile.release]
opt-level = "z"

[workspace.lints]
clippy = { map_err_ignore = "warn" }
