[package]
name = "wb-notifier"
version = "0.1.1"
edition = "2021"

[dependencies]
smol = { version = "2.0.0", optional = true }
postcard = { version = "1.0.8", default_features = false, features = [ "use-std" ] }
postcard-rpc = { version = "0.3.1", default-features = false }
wb-notifier-client = { path = "./client", optional = true }
wb-notifier-proto = { path = "./proto" }
wb-notifier-server = { path = "./server", optional = true }
argh = "0.1.12"
directories = { version = "5.0.1", optional = true }
config = { version = "0.13.4", default_features = false, features = [ "json" ], optional = true }
eyre = { version = "0.6.11", default-features = false, features = [ "auto-install" ]}
serde = { version = "1.0.196", default-features = false, features = [ "std", "derive" ], optional = true }

[[bin]]
name = "wbn-client"
path = "src/bin/client.rs"

[features]
default = [ "client", "server" ]
client = [ "dep:wb-notifier-client" ]
server = [ "dep:smol", "dep:wb-notifier-server", "dep:directories", "dep:config", "dep:serde"]

[workspace]
members = [ "client", "driver", "proto", "server" ]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = "fat"

[workspace.lints.clippy]
map_err_ignore = "warn"
pedantic = { level = "warn", priority = -1}
wildcard_imports = "allow"
module_name_repetitions = "allow"

# FIXME: Internal for-my-own-use crate, subject to change. Docs are not priority while
# crate is in flux.
missing_panics_doc = "allow"
missing_errors_doc = "allow"

