[package]
name = "wb-notifier-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = { version = "2.1.1", default-features = false }
embedded-hal = "0.2.7"
# embedded-hal-compat = { git="https://github.com/Dirbaio/embedded-hal-compat", branch="eh1.0", version = "0.12.0"}
ht16k33 = { git = "https://github.com/cr1901/ht16k33", branch="common-addrs", version = "0.5.0", features = [] }
shared-bus = "0.3.1"
wb-notifier-proto = { path = "../proto" }

[lints]
workspace = true
